--- a/dental.css
+++ b/dental.css
@@ -34,29 +34,32 @@
     
 }
 .phone{
-    width: 50px;
-    height: 40px;
+    width: 65px;
+    height: 50px;
 }
 
 .mail{
-    width: 50px;
-    height: 40px;
+    width: 65px;
+    height: 50px;
+}
+.texx{
+    font-size: 19px;
 }
 .bar2{
     width: 100%;
-    height: 80px;
+    height: 90px;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     text-align: center;
     background-color:rgb(33, 159, 232);
     align-items: center;
 }
 .home{
     width: 250px;
-    height:80px ;
+    height:100% ;
     text-align: center;
     background-color: rgb(5, 77, 155);
-    font-size: 25px;
+    font-size: 35px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -66,7 +69,7 @@
     width: 150px;
     height:15vh ;
     text-align: center;
-    font-size: 25px;
+    font-size: 35px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -203,10 +206,11 @@ background-color: rgb(8, 157, 220);
 }
 .cards{
     width: 100%;
-    height: 100vh;
+    height: 600px;
     display: flex;
     justify-content: space-around;
     background-color: white;
+    align-items: center;
 }
 .card{
     width: 350px;
